--- a/index.html
+++ b/index.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Adoption</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tiptop Furniture</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <header>
-      <h1>Pet Adoption Center</h1>
-      <nav>
-        <ul class="nav-links" id="nav-links">
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#Information">Information</a></li>
-          <li><a href="#Contact">Contact</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <div class="logo">Tiptop Furniture</div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <section id="Home" class="section">
-      <h1>Welcome to My Pet Adoption Centre</h1>
-      <p>
-        The Pet Adoption Center is dedicated to finding loving homes for animals
-        in need. We connect caring families with pets, ensuring a perfect match
-        for a lifetime of companionship.
-      </p>
-      <img
-        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.zoetispetcare.com%2Fblog%2Farticle%2Frequirements-adopt-pet&psig=AOvVaw2HAWAHpWNZ7SBm9oZ_GEL4&ust=1726729171695000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOD5-paXzIgDFQAAAAAdAAAAABAE"
-        alt="Centre image"
-      />
-    </section>
 
-    <section id="Information" class="section">
-      <h2>About Us</h2>
-      <p>
-        At the Pet Adoption Center, we are dedicated to rescuing and finding
-        forever homes for abandoned and homeless animals. We provide a nurturing
-        environment, offering veterinary care and socialization to ensure our
-        pets are healthy and ready for adoption. Our mission is to raise
-        awareness about animal welfare, educate the community on responsible pet
-        ownership, and create lasting bonds between pets and their new families.
-        Together, we can help every animal find the loving home they deserve!
-      </p>
+    <section id="home"></section>
+        <h1><br>Welcome to TIPTOP FURNITURE</h1>
+        <p>Here, we strive to create high-quality, comfortable furniture that is both functional and stylish. <br> Our products are crafted from recycled materials and are made with sustainable practices in mind.</p>
+        
     </section>
-
-    <section id="Contact" class="section">
-      <h2>Contact us through</h2>
-      <p>
-        phone Number (123) 156-4567 <br />Email Address
-        info@petadoptioncenter.org
-      </p>
-    </section>
+ 
+    <section id=products></section>
+    
+    <main>
+        <h1>Our Products</h1>
+        <section class="product-grid">
+            <div class="product-item">
+                <img src="https://images.unsplash.com/photo-1696774276995-93be4dc4b257?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"alt="Comfortable sofa">
+                <h2>Comfortable Sofa</h2>
+                <p>$299.00</p>
+                <button>Buy Now</button>
+            </div>
+            <div class="product-item">
+                <img src="https://plus.unsplash.com/premium_photo-1676320514175-8a41932fcd46?q=80&w=1475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Elegant Dining Table">
+                <h2>Elegant Dining Table</h2>
+                <p>$499.00</p>
+                <button>Buy Now</button>
+            </div>
+            <div class="product-item">
+                <img src="https://plus.unsplash.com/premium_photo-1671656349007-0c41dab52c96?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Ergonomic Office Chair">
+                <h2>Ergonomic Office Chair</h2>
+                <p>$149.00</p>
+                <button>Buy Now</button>
+            </div>
+            <div class="product-item">
+                <img src="https://plus.unsplash.com/premium_photo-1704744489988-1e4dfd3a8fcf?q=80&w=1504&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Wooden Bookshelf">
+                <h2>Wooden Bookshelf</h2>
+                <p>$399.00</p>
+                <button>Buy Now</button>
+            </div>
+            <div class="product-item">
+                <img src="https://plus.unsplash.com/premium_photo-1684175656253-8c08ec031be9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8S2luZyUyMFNpemUlMjBCZWR8ZW58MHx8MHx8fDA%3D" alt="King Size Bed">
+                <h2>King Size Bed</h2>
+                <p>$899.00</p>
+                <button>Buy Now</button>
+            </div>
+            <div class="product-item">
+                <img src="https://plus.unsplash.com/premium_photo-1664457233897-53a66b68f959?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Stylish Coffee Table">
+                <h2>Stylish Coffee Table</h2>
+                <p>$249.00</p>
+                <button>Buy Now</button>
+            </div>
+        </section>
+    </main>
 
     <footer>
-      <p>&copy; 2024 Pet Adoption Center</p>
+        <div class="social-media">
+            <div>For more  information, follow us on :</div><BR>
+            <a href="#facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#instagram"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
